# oarepo-communities

./: .gitignore  MANIFEST.in  README.md  oarepo.yaml  package.json  pyproject.toml  pytest.ini  run-tests.sh  run_tests.sh  setup.cfg  setup.py
.github/workflows/: main.yml  pypi-publish.yml  tests.yml
.trunk/: trunk.yaml
oarepo_communities/: __init__.py  api.py  cache.py  cli.py  config.py  constants.py  converters.py  errors.py  ext.py  ext_config.py  identity_to_entity_references.py  initial_config.py  links.py  loaders.py  models.py  permissions.py  proxies.py  record.py  search.py  signals.py  utils.py  version.py  views.py  workflow.py
oarepo_communities/administration/: communities.py
oarepo_communities/alembic/: 233d86562e3c_create_oarepo_communities_branch.py  5bfc0c97230d_change_type_to_varchar.py  7c97b0744b04_create_oarepo_communities_branch.py  fdeb1af86021_create_community_workflows_table.py  fe181325ba51_create_roles_relation_table.py
oarepo_communities/builtin_models/: communities.yaml
oarepo_communities/cf/: __init__.py  aai.py  loader.py  permissions.py  roles.py  workflows.py
oarepo_communities/cli/: __init__.py
oarepo_communities/collections/: __init__.py  views.py
oarepo_communities/collections/templates/semantic-ui/oarepo_communities/collections/: browse.html  collection.html
oarepo_communities/components/: actions.py  inclusion.py
oarepo_communities/datastreams/: __init__.py  transformers.py
oarepo_communities/fixtures/: __init__.py
oarepo_communities/generators/: record.py
oarepo_communities/i18n/: __init__.py  webpack.py
oarepo_communities/i18n/semantic-ui/translations/oarepo_communities/: i18next.js
oarepo_communities/i18n/translations/: messages.mo  messages.pot
oarepo_communities/i18n/translations/cs/LC_MESSAGES/: messages.mo  messages.po
oarepo_communities/i18n/translations/en/LC_MESSAGES/: messages.mo  messages.po
oarepo_communities/marshmallow/: __init__.py
oarepo_communities/model/presets/: __init__.py
oarepo_communities/model/presets/communities/records/: parent_community.py  parent_mapping.py  parent_record.py
oarepo_communities/model/presets/communities/services/records/: parent_record_schema.py  permission_policy.py  service_config.py  service_config_links.py
oarepo_communities/notifications/: __init__.py  generators.py
oarepo_communities/permissions/: generators.py  presets.py  record.py
oarepo_communities/records/: api.py  models.py
oarepo_communities/records/systemfields/: __init__.py  communities.py  manager.py  scenario.py  status.py  workflow.py
oarepo_communities/requests/: actions.py  community_delete.py  community_publish.py  community_submission.py  migrate.py  migration.py  remove_secondary.py  submission.py  submission_secondary.py  utils.py
oarepo_communities/resolvers/: communities.py  ui.py
oarepo_communities/resources/: __init__.py
oarepo_communities/resources/community_records/: config.py  resource.py
oarepo_communities/resources/components/: allowed_communities.py
oarepo_communities/resources/oarepo/: config.py  resource.py
oarepo_communities/resources/record_communities/: config.py  resource.py
oarepo_communities/schemas/: parent.py
oarepo_communities/services/: errors.py  links.py  params.py  results.py
oarepo_communities/services/community_inclusion/: service.py
oarepo_communities/services/community_records/: config.py  schema.py  service.py
oarepo_communities/services/community_role/: config.py  results.py  schema.py  service.py
oarepo_communities/services/components/: access.py  default_workflow.py  include.py  review.py
oarepo_communities/services/custom_fields/: workflow.py
oarepo_communities/services/oarepo/: config.py  service.py  uow.py
oarepo_communities/services/permissions/: generators.py  needs.py  policy.py  presets.py
oarepo_communities/services/record_communities/: config.py  errors.py  schema.py  service.py
oarepo_communities/services/records/: components.py  service.py
oarepo_communities/ui/: __init__.py
oarepo_communities/ui/communities_components/: __init__.py  webpack.py
oarepo_communities/ui/communities_components/templates/: RecordCommunities.jinja
oarepo_communities/ui/communities_landing/: __init__.py  components.py  webpack.py
oarepo_communities/ui/communities_landing/templates/: CommunityRecordPage.jinja
oarepo_communities/ui/oarepo_communities/: __init__.py  components.py  webpack.py
oarepo_communities/ui/oarepo_communities/templates/: CommunityRecordPage.jinja
oarepo_communities/utils/: utils.py
oarepo_communities/views/: __init__.py  api.py  app.py
oarepo_communities/worklows/: __init__.py  permissive_workflow.py
tests/: __init__.py  conftest.py  thesis.yaml
tests/api/: conftest.py  helpers.py  test_cli.py  test_community_keeping_record.py  test_community_record.py  test_links.py  test_models.py  test_permissions.py  test_rest.py  test_search.py  test_signals.py  utils.py
tests/api/cli/: invenio.cfg
tests/api/mappings/v7/records/: record-v1.0.0.json  record.json
tests/test_collections/: __init__.py  conftest.py  test_collections_service.py
tests/test_collections/ui/: __init__.py  conftest.py  test_collections_ui.py
tests/test_communities/: __init__.py  conftest.py  test_community_inclusion.py  test_community_records.py  test_community_requests.py  test_community_role_service.py  test_community_workflow.py  test_errors.py  test_notifications.py  test_param_interpreters.py  test_permissions.py  test_record_communities.py  test_records_inclusion_via_parent.py  utils.py
tests/test_communities/permissions/: conftest.py  test_community_members.py  test_community_role.py  test_default_community_members.py  test_default_community_role.py
tests/test_permissions/: conftest.py  test_community_inclusion_component.py  test_community_records.py  test_community_requests.py  test_permissions_api.py  test_permissions_requests.py  test_record_communities.py
tests/test_ui/: conftest.py  manifest.json  test_communities_ui.py
tests/ui/: __init__.py  thesis.py
(+34 files in other folders)
