[project]
name = "oarepo-communities"
dynamic = ["version"]
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
dependencies = [
    # "oarepo-requests",
    "oarepo[rdm,s3]>=14.0.0dev0,<15.0.0",
    "oarepo-runtime>=2.0.0dev23,<3.0.0",
    "oarepo-ui>=6.0.0dev7,<7.0.0",
    "oarepo-workflows>=2.0.0dev3,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "oarepo-invenio-typing-stubs",
]
tests = [
    "pytest-oarepo",
    "oarepo-rdm>=1.0.0.dev4",
]
oarepo14 = [
    "oarepo[rdm,s3]>=14.0.0dev0,<15.0.0",
]

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-communities"

[project.entry-points."invenio_assets.webpack"]
oarepo_communities_components_ui_theme = "oarepo_communities.ui.communities_components.webpack:theme"
oarepo_communities_i18n = "oarepo_communities.i18n.webpack:theme"
oarepo_communities_records_ui_theme = "oarepo_communities.ui.oarepo_communities.webpack:theme"

[project.entry-points."invenio_base.api_apps"]
oarepo_communities = "oarepo_communities.ext:OARepoCommunities"

# [project.entry-points."invenio_base.blueprints"]
# oarepo_communities = "oarepo_communities.views.app:create_app_blueprint"
# oarepo_communities_components = "oarepo_communities.ui.communities_components:create_blueprint"
#oarepo_communities_ui = "oarepo_communities.ui.oarepo_communities:create_blueprint"

# [project.entry-points."invenio_base.api_blueprints"]
# oarepo_communities = "oarepo_communities.views.api:create_oarepo_communities"

[project.entry-points."invenio_base.api_finalize_app"]
oarepo_communities = "oarepo_communities.ext:api_finalize_app"

[project.entry-points."invenio_base.apps"]
oarepo_communities = "oarepo_communities.ext:OARepoCommunities"



[project.entry-points."invenio_base.finalize_app"]
oarepo_communities = "oarepo_communities.ext:finalize_app"

[project.entry-points."invenio_i18n.translations"]
oarepo_communities_messages = "oarepo_communities.i18n"

[project.entry-points."invenio_requests.entity_resolvers"]
community_role = "oarepo_communities.resolvers.communities:CommunityRoleResolver"

[project.entry-points."invenio_notifications.entity_resolvers"]
community_role = "oarepo_communities.notifications:community_role_notification_resolver"

[project.entry-points."invenio_requests.types"]
confirm-community-migration = "oarepo_communities.requests.migration:ConfirmCommunityMigrationRequestType"
initiate-community-migration = "oarepo_communities.requests.migration:InitiateCommunityMigrationRequestType"
remove-secondary-community = "oarepo_communities.requests.remove_secondary:RemoveSecondaryCommunityRequestType"
secondary-community-submission = "oarepo_communities.requests.submission_secondary:SecondaryCommunitySubmissionRequestType"

[project.entry-points."oarepo.fixtures"]
oarepo_communities = "oarepo_communities.fixtures"

[project.entry-points."oarepo_requests.error_handlers"]
communities = "oarepo_communities.errors:RESOURCE_ERROR_HANDLERS"

[project.entry-points."oarepo_requests.identity_to_entity_references"]
community_role = "oarepo_communities.identity_to_entity_references:community_role_mappings"

[project.entry-points."oarepo_workflows.default_workflow_getters"]
community-default-workflow = "oarepo_communities.workflow:community_default_workflow"

[tool.hatch.version]
path = "oarepo_communities/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/oarepo_communities",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
