[project]
name = "oarepo-communities"
version = "7.0.0"
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.14,<3.15"
dependencies = [
    "oarepo-requests>=4.0.0,<5.0.0",
    "oarepo[rdm,tests]>=14.0.0dev0,<15.0.0",
    "oarepo-runtime>=3.0.0,<4.0.0",
    "oarepo-workflows>=3.0.0,<4.0.0",

    # invenio dependencies
    "invenio-app-rdm>=14.0.0b0,<15.0.0",
    "invenio-rdm-records>=27.0.0,<28.0.0",
    "invenio-search>=3.0.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-communities"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
    "types-PyYAML",
    "oarepo-invenio-typing-stubs"
]
tests = [
    "pytest-invenio>=4.0.0,<5.0.0",
    "pytest-oarepo>=3.0.0,<4.0.0",
    "oarepo-rdm>=2.0.0,<3.0.0",
]

oarepo14 = [
    "oarepo[rdm,tests]>=14.0.0dev0,<15.0.0",
]

[project.entry-points."invenio_assets.webpack"]
# oarepo_communities_components_ui_theme = "oarepo_communities.ui.communities_components.webpack:theme"
oarepo_communities_i18n = "oarepo_communities.i18n.webpack:theme"
oarepo_communities_records_ui_theme = "oarepo_communities.ui.oarepo_communities.webpack:theme"

[project.entry-points."invenio_base.api_apps"]
oarepo_communities = "oarepo_communities.ext:OARepoCommunities"

[project.entry-points."invenio_base.blueprints"]
oarepo_communities_ui = "oarepo_communities.ui.oarepo_communities:create_blueprint"

[project.entry-points."invenio_base.api_finalize_app"]
oarepo_communities = "oarepo_communities.ext:api_finalize_app"

[project.entry-points."invenio_base.apps"]
oarepo_communities = "oarepo_communities.ext:OARepoCommunities"

[project.entry-points."invenio_base.finalize_app"]
oarepo_communities = "oarepo_communities.ext:finalize_app"
oarepo_communities_ui = "oarepo_communities.ui.oarepo_communities:finalize_app"

[project.entry-points."invenio_i18n.translations"]
oarepo_communities_messages = "oarepo_communities.i18n"

[project.entry-points."invenio_requests.entity_resolvers"]
community_role = "oarepo_communities.resolvers.communities:CommunityRoleResolver"

[project.entry-points."invenio_notifications.entity_resolvers"]
community_role = "oarepo_communities.notifications:community_role_notification_resolver"

[project.entry-points."invenio_requests.types"]
confirm-community-migration = "oarepo_communities.requests.migration:ConfirmCommunityMigrationRequestType"
initiate-community-migration = "oarepo_communities.requests.migration:InitiateCommunityMigrationRequestType"
remove-secondary-community = "oarepo_communities.requests.remove_secondary:RemoveSecondaryCommunityRequestType"
secondary-community-submission = "oarepo_communities.requests.submission_secondary:SecondaryCommunitySubmissionRequestType"

[project.entry-points."oarepo.fixtures"]
oarepo_communities = "oarepo_communities.fixtures"

[project.entry-points."oarepo_requests.error_handlers"]
communities = "oarepo_communities.errors:RESOURCE_ERROR_HANDLERS"

[project.entry-points."oarepo_workflows.default_workflow_getters"]
community-default-workflow = "oarepo_communities.workflow:community_default_workflow"

[project.entry-points."invenio_config.module"]
oarepo_communities = "oarepo_communities.initial_config"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/oarepo_communities",
]

#[tool.hatch.metadata]
#allow-direct-references = true
