[metadata]
name = oarepo-communities
version = 4.0.8
description =
authors = Ronald Krist <krist@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.9
install_requires =
    invenio-communities<=6.0.0
    invenio-drafts-resources
    oarepo-runtime
    cachetools
#packages = find:

[options.extras_require]
tests =
    oarepo-model-builder-tests>=4.0.0
    oarepo-model-builder-drafts>=4.0.0
    oarepo-model-builder-communities>=4.0.0

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

[options.entry_points]
invenio_base.apps =
    oarepo_communities = oarepo_communities.ext:OARepoCommunities
invenio_base.api_apps =
    oarepo_communities = oarepo_communities.ext:OARepoCommunities
invenio_requests.entity_resolvers =
    oarepo_community =  oarepo_communities.resolvers.communities:OARepoCommunityResolver

