[metadata]
name = oarepo-communities
version = 4.0.14
description =
authors = Ronald Krist <krist@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.9
install_requires =
    # invenio-communities         # not setting version here, will be limited by oarepo
    # invenio-drafts-resources    # not setting version here, will be limited by oarepo
    cachetools
#packages = find:

[options.extras_require]
tests =
    pytest-invenio
    oarepo-global-search
    oarepo-runtime

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

[options.entry_points]
invenio_base.apps =
    oarepo_communities = oarepo_communities.ext:OARepoCommunities
invenio_base.api_apps =
    oarepo_communities = oarepo_communities.ext:OARepoCommunities
invenio_base.api_blueprints =
    oarepo_communities = oarepo_communities.views.api:create_oarepo_communities
invenio_base.blueprints =
    oarepo_communities = oarepo_communities.views.app:create_app_blueprint
invenio_requests.entity_resolvers =
    oarepo_community =  oarepo_communities.resolvers.communities:OARepoCommunityResolver
invenio_administration.views =
    oarepo_communities_details = oarepo_communities.administration.communities:CommunityDetailView
    oarepo_communities_list = oarepo_communities.administration.communities:CommunityListView
    oarepo_communities_create = oarepo_communities.administration.communities:CommunityCreateView
    oarepo_communities_edit = oarepo_communities.administration.communities:CommunityEditView
