[metadata]
name = oarepo-communities
version = 4.0.14
description =
authors = Ronald Krist <krist@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.9
install_requires =
    invenio-communities         # not setting version here, will be limited by oarepo
    invenio-drafts-resources    # not setting version here, will be limited by oarepo
    oarepo-runtime
    cachetools
#packages = find:

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

[options.entry_points]
invenio_base.apps =
    oarepo_communities = oarepo_communities.ext:OARepoCommunities
invenio_base.api_apps =
    oarepo_communities = oarepo_communities.ext:OARepoCommunities
invenio_base.api_blueprints =
    oarepo_communities = oarepo_communities.views.api:create_oarepo_communities
invenio_base.blueprints =
    oarepo_communities = oarepo_communities.views.app:create_app_blueprint
invenio_requests.entity_resolvers =
    oarepo_community =  oarepo_communities.resolvers.communities:OARepoCommunityResolver
invenio_requests.types =
    community-migration = oarepo_communities.requests.migration:CommunityMigrationRequestType
    remove-secondary-community = oarepo_communities.requests.remove_secondary:RemoveSecondaryRequestType
    secondary-community-submission = oarepo_communities.requests.submission_secondary:SecondaryCommunitySubmissionRequestType
oarepo_workflows.default_workflow_getters =
    community-default-workflow = oarepo_communities.workflow:community_default_workflow

